Can't use const with RRR

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,13 @@
 ######################
 Community_Basic.js
 MadeWithMv.js
+AltMenuScreen.js
+AltSaveScreen.js
+EnemyBook.js
+ItemBook.js
+SimpleMsgSideView.js
+TitleCommandPosition.js
+WeaponSkill.js
 
 # Configuration files
 ######################
